sumo/tests/sumo/extended/calibrator/errors/vClass_mismatch/errors.sumo
Error: Vehicle 'cali.0.0' has no valid route. No connection between edge 'beg2' and edge 'middle'.
Quitting (on error).
